--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -10,6 +10,7 @@ dl, dd, ol, ul, figure {
 
 
 
+
 /**
  * Basic styling
  */
@@ -97,6 +98,22 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: $base-font-weight;
 }
 
+.pagination a {
+  color: black;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+  margin: 0 4px;
+}
+
+.pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+  border: 1px solid #4CAF50;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
 
 
 /**
