Add mastodon url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,6 +23,7 @@
 
       <div class="footer-col footer-col-2">
         {%- include social.html -%}
+        <li><a rel="me" href="https://hachyderm.io/@robotahu">Mastodon</a></li>
       </div>
 
       <div class="footer-col footer-col-3">
